--- a/coursera/statisticalInference/project/project2.Rmd
+++ b/coursera/statisticalInference/project/project2.Rmd
@@ -4,62 +4,92 @@ author: "Jens Schreiber"
 date: "16. Mai 2015"
 output: html_document
 ---
-The folloing executive summary shall analyze the ToothGrowth data in the R datasets package. 
 
-###Load the ToothGrowth data and perform some basic exploratory data analyses 
+The folloing executive summary shall analyze the ToothGrowth data in the R datasets package. Specifically it shall analyse the influcen of supplements and dosage on the tooth growth of guinea pigs.
 
-First we load the data:
+Load the data:
 
 ```{r,cache=TRUE}
   library(datasets)
 ```
 
-With the following command
+###Exploratory data analyses of the TooThGrowth dataset
 
-```{r}
-  ?ToothGrowth
-```
-
-we get description: "The response is the length of odontoblasts (teeth) in each of 10 guinea pigs at each of three dose levels of Vitamin C (0.5, 1, and 2 mg) with each of two delivery methods (orange juice or ascorbic acid)."
-
-Furthermore the dataset has the following three variables:
+The description of the datasets is: "The response is the length of odontoblasts (teeth) in each of 10 guinea pigs at each of three dose levels of Vitamin C (0.5, 1, and 2 mg) with each of two delivery methods (orange juice or ascorbic acid)."
+The dataset has the following three variables:
 
 + len	as the numeric	Tooth length
 + supp as the factor for the Supplement type (VC or OJ).
 + dose as the Dose in milligrams.
 
+Based upon the former given description a scatter plot which shows the relation between the supplement and the dosage in relation to the length seems to be of interest.
+
 ```{r,cache=TRUE}
   library(ggplot2)
   qplot(dose, len, data=ToothGrowth, shape=supp, color=supp,main="",
-  xlab="Dose", ylab="Tooth length")  
+  xlab="Dose level", ylab="Tooth length")  
 ```
+
+In the former plot it seems that the "OJ" supplement has a larger mean of the tooth length accross different dosages.
 
 Using a boxplot it is possible to show the relation between the different vitamin levels and the length of the tooth grow.
 
 ```{r,cache=TRUE}
   library(ggplot2)
   ggplot(ToothGrowth, aes(x=factor(dose), y=len, fill=factor(dose)))+
-  geom_boxplot()+
-  facet_grid(.~supp)+
-  ggtitle("ToothGrowth data in relation to dose factor")
+  geom_boxplot()+facet_grid(.~supp)+
+  ylab("Tooth length") + xlab("Dose level") +
+  ggtitle("ToothGrowth data in relation to dose level")
 ```
 
+In the box plot we can see that the mean tooth lengths for different dose levels is higher for orange juice compared to  ascorbic acid. However for a dose factor of 2 the mean is almost similar between the two supplements.
 
-The plot shows that for both supplements VC and OJ and a with higher dose value the pigs tend to have longer tooths.
+###Basic summary of the data.
 
-###Provide a basic summary of the data.
+The following code splits the ToothGrowth data set into the different supplements and different dose leve and then calculate the mean and the standard deviation of each subset and summarise it in a single table.
 
-```{r,cache=TRUE}
-  head(ToothGrowth)
-  summary(ToothGrowth)
+```{r}
+  vcToothData<-ToothGrowth[ToothGrowth$supp=="VC",]
+  ojToothData<-ToothGrowth[ToothGrowth$supp=="OJ",]
+  vcTooth.dose0.5<-vcToothData[vcToothData$dose==0.5,]$len
+  vcTooth.dose1<-vcToothData[vcToothData$dose==1.0,]$len
+  vcTooth.dose2<-vcToothData[vcToothData$dose==2.0,]$len
+  ojTooth.dose0.5<-ojToothData[ojToothData$dose==0.5,]$len
+  ojTooth.dose1<-ojToothData[ojToothData$dose==1.0,]$len
+  ojTooth.dose2<-ojToothData[ojToothData$dose==2.0,]$len
+  vcSum<-c(mean(vcTooth.dose0.5), sd(vcTooth.dose0.5), 
+           mean(vcTooth.dose1), sd(vcTooth.dose1), 
+           mean(vcTooth.dose2), sd(vcTooth.dose1))
+  ojSum<-c(mean(ojTooth.dose0.5), sd(ojTooth.dose0.5), 
+           mean(ojTooth.dose1), sd(ojTooth.dose1), 
+           mean(ojTooth.dose2), sd(ojTooth.dose1))
+  sumComp <- data.frame(rbind(vcSum, ojSum))
+  names(sumComp) <- c("muDose0.5","sdDose0.5","muDose1","sdDose1","muDose2","sdDose2")
+  sumComp
 ```
 
-###Use confidence intervals and/or hypothesis tests to compare tooth growth by supp and dose. (Only use the techniques from class, even if there's other approaches worth considering)
+In the summary of the data we can see that in effect the mean value of orange juice is bigger than ascorbic acid, however also the standard deviation in the different subsets is higher for orange juice.
 
 
-```{r,cache=TRUE}
-  vcToothLen<-ToothGrowth[ToothGrowth$supp=="VC",]$len
-  ojToothLen<-ToothGrowth[ToothGrowth$supp=="OJ",]$len
+###Comparison of tooth growth by supp and dose
+
+Based upon the preliminary analysis we want to examine if the difference in mean between OJ and VC is significant using the t. test assuming there variance is not equal. Where $H_0$ states that the difference in mean is equal to zero. $H_1$ states that the difference is mean is not equal to zero.
+
+
+```{r}
+  #t.test(vcTooth.dose0.5, ojTooth.dose0.5,var.equal=FALSE)
+  p1<-t.test(vcTooth.dose0.5, ojTooth.dose0.5,var.equal=FALSE)$p.value
+  p2<-t.test(vcTooth.dose1, ojTooth.dose1,var.equal=FALSE)$p.value
+  p3<-t.test(vcTooth.dose2, ojTooth.dose2,var.equal=FALSE)$p.value
+  c(p1,p2,p3)
+```
+In the first to cases (p1,p2) we see that for a dose level of 0.5 and 1.0 the $H_0$ is rejected in favour of $H_1$, so in this case there is a significant difference in the mean considering a confidence level of $0.95$. Where for a dose level of 2.0 $H_0$ is accepted. 
+  
+
+
+```{r,cache=TRUE}  
+  vcToothLen <- vcToothData$len
+  ojToothLen  <- ojToothData$len
   t.test( ojToothLen,vcToothLen , paired=TRUE,alternative="less",var.equal=FALSE)
 ```
 With  the previous command we checked whether the mean of the values contained in the vector ojToothLen is less  of the mean of the values contained in the vector vcToothLen. In response, we obtained a p-value well above 0.05, which leads us to conclude that we can reject the null hypothesis H0 in favor of the alternative hypothesis H1: vcToothLen is substantial bigger thant ojToothLen.
@@ -86,7 +116,7 @@ With  the previous command we checked whether the mean of the values contained i
 
 
 
-###State your conclusions and the assumptions needed for your conclusions. 
+### Conclusion
 
 ```{r, echo=FALSE}
 
